--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DB=mongodb+srv://green_stern_holding:binance@green.vk9ncjj.mongodb.net/?retryWrites=true&w=majority&appName=green
 PORT=5000
 SECRET_KEY=make_me_better
+API_KEY=bkF9PhCHZ4LZnLZuVmIRs0dj0mTHR2mzxkmwAWF6k5s
