--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DB=mongodb+srv://green_stern_holding:binance@green.vk9ncjj.mongodb.net/?retryWri
 PORT=5000
 SECRET_KEY=make_me_better
 API_KEY=bkF9PhCHZ4LZnLZuVmIRs0dj0mTHR2mzxkmwAWF6k5s
+MERCHANT_ID=a815357a-788d-4c35-9528-0d999a27b6fc
