--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "blockonomics": "^1.0.3",
     "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
