--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "multer": "^1.4.5-lts.1",
-    "nodejs-base64": "^2.0.0"
+    "nodejs-base64": "^2.0.0",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
