--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.1.2",
     "multer": "^1.4.5-lts.1",
     "nodejs-base64": "^2.0.0",
