--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.1.2",
+    "mongoose": "^8.2.4",
     "multer": "^1.4.5-lts.1",
     "nodejs-base64": "^2.0.0",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
